Updating Bitbucket changes first before my change

--- a/iptweb/iptsite/templates/iptsite/index.html
+++ b/iptweb/iptsite/templates/iptsite/index.html
@@ -14,6 +14,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
             integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
             crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="../base.css">
 </head>
 <body>
 <div class="container">
@@ -66,10 +67,10 @@
                         </div>
                         <div>
 								    <span id="fileselector">
-								        <label class="btn btn-default" for="upload-file-selector">
+
                                             <input id="upload-file-selector" type="file">
                                             <i class="fa_icon icon-upload-alt margin-correction"></i>Upload
-                                        </label>
+
 								    </span>
                         </div>
                         <div class="form-group">
