--- a/iptweb/iptsite/templates/base.css
+++ b/iptweb/iptsite/templates/base.css
@@ -1,6 +1,24 @@
+body {
+    background: black;
+}
+
 .navbar {
     margin-bottom: 0;
+    background: #039;
+
   }
-  .jumbotron {
+
+.navbar-default{
+    border-color: #039;
+    border-radius: 0px;
+    background-color: #039;
+    color: #ffffff;
+}
+
+.navbar-default .navbar-brand{
+    color: #ffffff;
+}
+
+.jumbotron {
       margin-bottom: 0;
     }
