--- a/iptweb/iptsite/templates/iptsite/help.html
+++ b/iptweb/iptsite/templates/iptsite/help.html
@@ -1,17 +1,6 @@
 {% extends 'base.html' %}
+{% load static %}
 
-{% block activetab %}
-<div class="container">
-    <ul class="nav nav-tabs">
-        <li><a data-toggle="tab" href="terminal">Terminal</a></li>
-        <li><a data-toggle="tab" href="compile">Compile</a></li>
-        <li><a data-toggle="tab" href="run">Run</a></li>
-        <li><a data-toggle="tab" href="history">Job History</a></li>
-        <li class="active"><a data-toggle="tab" href="help">Help</a></li>
-{% if admin %}
-        <li><a data-toggle="tab" href="admin">Admin</a></li>
-{% endif %}
-        {% endblock %}
 
         {% block body %}
         <!-- Help Tab -->
@@ -21,34 +10,54 @@
         <h4><a href="https://diagrid.org/resources/ipt/about" target="_blank"
                alt="Interactive Parallelization Tool (IPT)">Interactive Parallelization Tool (IPT)</a></h4>
 
-        <p>"Interactive Parallelization Tool (IPT) is a prototype of a high-level tool for developing parallel
-            applications. IPT can transform serial applications into multiple parallel variants using MPI, OpenMP, CUDA,
-            and Hybrid Programming models."</p>
-        <h4><a href="http://dl.acm.org/citation.cfm?id=2616558" target="_blank"
-               alt="A Tool for Interactive Parallelization">A Tool for Interactive Parallelization</a></h4>
-
-        <p>"<i>Tell me, I'll forget, Show me, I may remember, Involve me, I'll understand.</i> - Confucius. This proverb
-            describes the essence of our paper and the motivation behind the development of the Interactive
-            Parallelization Tool (IPT) that can transform serial applications into multiple parallel variants."</p>
+        <p>Interactive Parallelization Tool (IPT) is a high-level tool for transforming serial C/C++ applications
+          into their parallel variants. The parallel programming models that are currently supported by IPT are:
+          MPI, OpenMP, CUDA, and Hybrid Programming models. The end-users of IPT must have an understanding
+          of the basic concepts involved in parallel programming (e.g., data distribution and data gathering).
+          After developing an understanding of the basic parallel programming concepts,
+          IPT can be used by its target audience (domain experts and students) to semi-automatically generate
+          parallel programs based on multiple parallel programming paradigms (MPI, OpenMP, and CUDA), and
+          learn about these paradigms through observation and comparison. The IPT-based personalized learning
+          approach complements the traditional methods of learning and training that usually emphasize the syntax
+          and semantics of one or more programming standards. IPT provides a jumpstart to the domain experts
+          in using modern High Performance Computing (HPC) platforms for their research and development needs,
+          and hence lowers the adoption barriers to HPC.</p>
+        <h4>
+          For further high-level details related to IPT (motivation, design, benefits), please review our
+            <a href="http://dl.acm.org/citation.cfm?id=2616558" target="_blank" alt="A Tool for Interactive Parallelization">paper</a>.
+        </h4>
 
         <!--Section header-->
         <h2>Want to Learn More?</h2>
         <!--Links-->
-        <h4><a href="help/iptsite/supportdocs/Tutorial_Files.zip" target="_blank" alt="Tutorial Files for IPT">Tutorial
+        <h4><a href="{% static 'supportdocs/trainingIPT.zip' %}" target="_blank" alt="Tutorial Files for IPT">Tutorial
             Files for IPT</a></h4>
 
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-            dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
-        <h4><a href="help/iptsite/supportdocs/User_Guide_1.0.pdf" target="_blank" alt="IPT user guide">IPT User
+        <p>Some test cases and the step-by-step process of parallelizing those test cases using IPT can be downloaded
+        <a href={% static 'supportdocs/trainingIPT.zip' %} target="_blank" alt="IPT user guide">here</a>.</p>
+
+        <h4><a href="{% static 'supportdocs/User_Guide_1.0.pdf' %}" target="_blank" alt="IPT user guide">IPT User
             Guide</a></h4>
 
-        <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
+        <h4>The usage of IPT is also demonstrated through the following videos:</h4>
+        <h5>OpenMP Version of Molecular Dynamics Code Using the Interactive Parallelization Tool</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/JH7o_k9Bxd0?rel=0" frameborder="0" allowfullscreen></iframe>
+        <h5>Interactive Parallelization Tool - Parallelizing Molecular Dynamics with MPI</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/HvlA4pnfFjE?rel=0" frameborder="0" allowfullscreen></iframe>
+        <h5>The Interactive Parallelization Tool - Parallelizing the FFT Algorithm with CUDA</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/kCOjqza7OG8?rel=0" frameborder="0" allowfullscreen></iframe>
+        <h5>The Interactive Parallelization Tool - Parallelizing the FFT algorithm with OpenMP</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/L4a19kF6q48?rel=0" frameborder="0" allowfullscreen></iframe>
+        <h5>The Interactive Parallelization Tool - Parallelizing the FFT algorithm with MPI</h5>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/sg9HDTz0zbo?rel=0" frameborder="0" allowfullscreen></iframe>
+
+        <!-- <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
             dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.</p>
         <h4><a href="https://www.youtube.com/watch?v=HvlA4pnfFjE" target="_blank"
                alt="Video demonstration of how to use Interactive Parallelization Tool - Parallelizing Molecular Dynamics with MPI">Interactive
-            Parallelization Tool - Parallelizing Molecular Dynamics with MPI</a></h4>
+            Parallelization Tool - Parallelizing Molecular Dynamics with MPI</a></h4> -->
 
-        <p>This demo utilizes the interactive parallelization tool developed at TACC to pararallelize the Molecular
+        <!-- <p>This demo utilizes the interactive parallelization tool developed at TACC to pararallelize the Molecular
             Dynamics code. The beta version of this code is available on Diagrid.</p>
         <h4><a href="https://www.youtube.com/watch?v=L4a19kF6q48" target="_blank"
                alt="Video demonstration of how to use The Interactive Parallelization Tool - Parallelizing the FFT algorithm with OpenMP">The
@@ -56,5 +65,5 @@
 
         <p>A brief walk-through on how to use this tool to transform a sequential program into a parallel one through a
             command line interface. In this demonstration, we will be parallelizing the Fast Fourier Transform Algorithm
-            with OpenMP.</p>
+            with OpenMP.</p> -->
         {% endblock %}
