--- a/iptweb/messageBoard/templates/customForm.html
+++ b/iptweb/messageBoard/templates/customForm.html
@@ -12,7 +12,7 @@
 <input type="submit" value="Submit">
 <input type="reset" value="Reset">
 <!--<a href="{% url 'history' %}">Cancel</a>-->
-<input class="button" type="button" onclick='window.location.replace("{% url 'history' %}")' value="Cancel" />
+<input class="button" type="button" onclick='window.location.replace("{% url 'commentHistory' %}")' value="Cancel" />
 </form>
 
 <!--<table>
@@ -30,5 +30,3 @@
   </tr>
 </table>-->
 {% endblock %}
-
-
