--- a/iptweb/iptsite/templates/base.html
+++ b/iptweb/iptsite/templates/base.html
@@ -2,35 +2,35 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Interactive Parallelization Tool</title>
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
-          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-          <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="{% static 'css/main.css' %}">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src='https://www.google.com/recaptcha/api.js'></script>
+  <title>Interactive Parallelization Tool</title>
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
+  <!-- Latest compiled and minified CSS -->
+  <link rel="stylesheet" href="{% static 'css/main.css' %}">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <script src='https://www.google.com/recaptcha/api.js'></script>
 </head>
 
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-default">
-      <div class="container-fluid">
-          <div class="navbar-header">
-            <a class="navbar-brand"><img src="{% static 'images/IPT-Fut.svg' %}"></a>
-              <!--<a class="navbar-brand">Interactive Parallelization Tool</a> -->
-          </div>
-
-          <ul class="nav navbar-nav navbar-right">
-              {% if request.session.access_token %}
-                <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
-              {% else %}
-                <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
-              {% endif %}
-          </ul>
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand"><img src="{% static 'images/IPT-Fut.svg' %}"></a>
+        <!--<a class="navbar-brand">Interactive Parallelization Tool</a> -->
       </div>
+
+      <ul class="nav navbar-nav navbar-right">
+        {% if request.session.access_token %}
+        <li><a href="{% url 'logout' %}"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+        {% else %}
+        <li><a href="{% url 'login' %}"><span class="glyphicon glyphicon-log-out"></span> Login</a></li>
+        {% endif %}
+      </ul>
+    </div>
   </nav>
   <div class="main-banner">
     <p><img src="{% static 'images/IPT-Banner.jpg' %}" class="img-responsive" alt="IPT Banner"></p>
@@ -39,22 +39,21 @@
   <div class="container">
     <ul class="nav nav-tabs">
       {% if loggedinusername %}
-          <li id='terminal-tab'><a href="{% url 'terminal' %}">Terminal</a></li>
-          <li id='compile-tab'><a href="{% url 'compile' %}">Compile</a></li>
-          <li id='run-tab'><a href="{% url 'run' %}">Run</a></li>
-          <li id='history-tab'><a href="{% url 'history' %}">Job History</a></li>
-        {% if admin %}
-          <li id='admin-tab'><a href="{% url 'admin' %}">Admin</a></li>
-        {% endif %}
-      {% endif %}
+      <li id='terminal-tab'><a href="{% url 'terminal' %}">Terminal</a></li>
+      <li id='compile-tab'><a href="{% url 'compile' %}">Compile</a></li>
+      <li id='run-tab'><a href="{% url 'run' %}">Run</a></li>
+      <li id='history-tab'><a href="{% url 'history' %}">Job History</a></li>
+      <li id='editnews-tab'><a href="{% url 'newsHistory' %}">Edit News</a></li>
+      {% if admin %}
+      <li id='admin-tab'><a href="{% url 'admin' %}">Admin</a></li>
+      {% endif %} {% endif %}
       <li id='community-tab'><a href="/community/blog/">Community</a></li>
       <li id='help-tab'><a href="{% url 'help' %}">Help</a></li>
     </ul>
-  <!-- End Tabs -->
+    <!-- End Tabs -->
 
     <div class="tab-content">
-      {% block header %}{% endblock %}
-      {% block headersum %}{% endblock %}
+      {% block header %}{% endblock %} {% block headersum %}{% endblock %}
 
       <!-- <div class="messages">
         {% for message in messages %}
@@ -62,20 +61,35 @@
         {% endfor %}
       </div> -->
 
-      {% bootstrap_messages %}
-
-      {% block body %}{% endblock %}
+      {% bootstrap_messages %} {% block body %}{% endblock %} {% block news %}{% endblock %}
     </div>
   </div>
+  <!-- footer -->
+  <div id="footer">
+    <footer style="position: static; left: 0; bottom: 0; width: 100%; background-color: #174b63; color: white; text-align: center;">
+      <div class="container-fluid">
+        <span style="font-size:20px; font-weight:bold;"> This project has been generously funded by the National
+     Science Foundation (NSF) Award #1664022.
+                <a href="https://www.nsf.gov/">
+                    <img class="nsfLogo" src="{% static 'images/nsf.jpg' %}" width="65" height="65" alt="NSF Logo">
+                </a>
+            </span>
+        <div class="container-fluid">
+          <span> &copy;2018 University of Texas at Austin, All Rights Reserved.</span>
+        </div>
+      </div>
+    </footer>
+  </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
-        integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
-        crossorigin="anonymous"></script>
-        <!-- Latest compiled and minified JavaScript -->
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-<script src="{% static 'js/main.js' %}"></script>
-{% block scripts %}{% endblock %}
+  <!-- end of footer -->
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+  <!-- Latest compiled and minified JavaScript -->
+  <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+  <script src="{% static 'js/main.js' %}"></script>
+  {% block scripts %}{% endblock %}
 
 </body>
+
 </html>
